# PyWiFiCli

./: .gitignore  LICENSE  README.md  pyproject.toml
.reports/: test_report.html
.reports/coverage/: d_2608e68cd280c3ca___init___py.html  d_2608e68cd280c3ca_linux_nmcli_legacy_py.html  d_2608e68cd280c3ca_linux_nmcli_py.html  d_2608e68cd280c3ca_linux_wpa_py.html  d_2608e68cd280c3ca_macos_py.html  d_2608e68cd280c3ca_windows_py.html  d_4f79b289296271dd___init___py.html  d_4f79b289296271dd_driver_py.html  d_4f79b289296271dd_metadata_py.html  d_4f79b289296271dd_model_py.html  d_50020742149aca6d_driver_factory_py.html  d_ef83a22b42d99c87___init___py.html  d_ef83a22b42d99c87_exceptions_py.html  d_ef83a22b42d99c87_logging_py.html  d_ef83a22b42d99c87_util_py.html  index.html  status.json
docs/: api.rst  conf.py  design.md  index.rst
pywificli/: __init__.py  exceptions.py  logging.py  util.py
pywificli/components/: driver_factory.py
pywificli/demos/: demo.py
pywificli/domain/: __init__.py  driver.py  metadata.py  model.py
pywificli/drivers/english/: __init__.py  linux_nmcli.py  linux_nmcli_legacy.py  linux_nmcli_wpa.py  linux_wpa.py  macos.py  windows.py
pywificli/scripts/: scan_ssids.py
tests/: conftest.py
tests/unit/: test_cmd.py  test_factory.py
